Add functions for creating EndNote XML export files